--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,17 @@
-/* tailwind configure */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* tailwind configure */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  border: none; /* Remove all borders */
-  outline: none; /* Remove all outlines */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+.custom-btn {
+  background-color: #1a202c; /* Equivalent to bg-gray-900 */
+ 
+ 
+  color: #ffffff; /* Equivalent to text-white */
+  font-weight: bold; /* Equivalent to font-bold */
+  padding: 0.5rem 1rem; /* Equivalent to py-2 px-4 */
+  border-radius: 0.375rem; /* Equivalent to rounded */
 }
 
-body {
-  overflow-x: hidden;
+.custom-btn:hover {
+  background-color: #2d3748; /* Equivalent to hover:bg-gray-800 */
 }
