--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-*{
-  margin:0px;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+* {
+  margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   border: none;
   outline: none;
 }
-body{
+body {
   overflow-x: hidden;
   font-family: "Poppins";
 }
 /* scrroll display none */
 .custom-scroll::-webkit-scrollbar {
-  display:none !important;
+  display: none !important;
 }
 .custom-btn {
   background-color: #1a202c; /* Equivalent to bg-gray-900 */
- 
- 
+
   color: #ffffff; /* Equivalent to text-white */
-  font-weight: bold; /* Equivalent to font-bold */
+  font-weight: 400; /* Equivalent to font-bold */
   padding: 0.5rem 1rem; /* Equivalent to py-2 px-4 */
   border-radius: 0.375rem; /* Equivalent to rounded */
 }
@@ -37,3 +35,17 @@ body{
   max-height: 100px; /* Set the desired maximum height */
   max-width: 100px; /* Set the desired maximum width */
 }
+/* ant modal footer  ok button */
+
+button.ant-btn.css-dev-only-do-not-override-xu9wm8.ant-btn-primary,
+button.ant-btn.css-dev-only-do-not-override-xu9wm8.ant-btn-default {
+  background-color: #1a202c; /* Equivalent to bg-gray-900 */
+
+  color: #ffffff; /* Equivalent to text-white */
+   font-weight: 500;
+  padding: 0.5rem 1rem; /* Equivalent to py-2 px-4 */
+  border-radius: 0.375rem; /* Equivalent to rounded */
+  height: 100%;
+}
+/* ant modal footer  cancel button */
+ 
