--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,7 @@ button.ant-btn.css-xu9wm8.ant-btn-primary
  /* Add this CSS to your stylesheets */
 
 /*  */
-
+/* ant modal -full modal bg */
 div.ant-modal-content{
   background-color: #f8f9fadc !important;
 }
