--- a/components/admin/home/map/cluster.css
+++ b/components/admin/home/map/cluster.css
@@ -1,12 +1,31 @@
+/* Add this CSS to your stylesheet */
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.4);
+    opacity: 0.9;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 .cluster-marker {
   color: #fff;
   background: #1978c8;
   border-radius: 50%;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: pulse 1.5s infinite; /* Apply the pulse animation */
 }
+
+
 .mapboxgl-popup-close-button {
   font-size: 2rem;
   color: white;
