--- a/components/admin/home/map/cluster.css
+++ b/components/admin/home/map/cluster.css
@@ -18,10 +18,33 @@
   color: #fff;
   background: #1978c8;
   border-radius: 50%;
-  padding: 20px;
+  padding: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: pulse 1.5s infinite; /* Apply the pulse animation */
+}
+/* updown */
+
+
+@keyframes updown {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.4);
+    opacity: 0.9;
+  
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+    
+  }
+}
+
+.updown-anim {
   animation: pulse 1.5s infinite; /* Apply the pulse animation */
 }
 
