--- a/styles/review.css
+++ b/styles/review.css
@@ -20,11 +20,12 @@
   flex-direction: column;
 }
 .submitDialogTextArea {
-  border: 1px solid rgba(0, 0, 0, 0.082);
+  border: 1px solid rgba(0, 0, 0, 0.308);
   margin: 1vmax 0;
   outline: none;
   padding: 1rem;
   font: 300 1rem "Roboto";
+  border-radius: 8px;
 }
 
 .reviewsHeading {
@@ -78,10 +79,14 @@
 }
 /* pagination */
 
+
+/* pagination */
+
 .pagination {
   display: flex;
   justify-content: center;
   padding: 0;
+  margin: 6px 0px;
 }
 
 .page-item {
@@ -94,6 +99,7 @@
 }
 .page-item:first-child {
   border-radius: 5px 0 0 5px;
+  background-color: rgb(238, 235, 235);
 }
 
 .page-item:last-child {
@@ -112,10 +118,14 @@
 
 .page-item:hover .page-link {
   color: rgb(0, 0, 0);
+  font-weight: bold;
 }
-
+li.page-item.active{
+  background-color: rgba(255, 99, 71, 0.877) !important;
+  color: white !important;
+}
 .pageItemActive {
-  background-color: green;
+  background-color: rgba(255, 99, 71, 0.877) !important;
 }
 
 .pageLinkActive {
