--- a/styles/shipping.css
+++ b/styles/shipping.css
@@ -11,7 +11,7 @@
 
 .MuiStepConnector-active,
 .MuiStepConnector-completed {
-  background-color: rgb(171, 216, 7)200, 255, 0
+  background-color: #22c55e
 }
 /* checkout steps component style end */
 
